--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.1
+  sdk: ^3.10.0
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -49,6 +49,20 @@ dependencies:
   uuid: ^4.5.1
   device_info_plus: ^12.1.0
   package_info_plus: ^9.0.0
+  http: ^1.5.0
+  google_sign_in: ^7.2.0
+  flutter_secure_storage: ^9.2.4
+  local_auth: ^3.0.0
+  connectivity_plus: ^7.0.0
+  screen_time: ^0.10.3
+  battery_plus: ^7.0.0
+  biometric_storage: ^5.0.1
+  encrypt: ^5.0.3
+  app_installer: ^1.3.1
+  device_apps_plus: ^1.0.2
+  device_frame_plus: ^1.5.0
+  installed_apps: ^2.0.0
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
