UI consistency and basic crypto fetching Jay 22/11/2025

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,9 @@ dependencies:
   device_frame_plus: ^1.5.0
   installed_apps: ^2.0.0
   collection: ^1.19.1
+  shimmer: ^3.0.0
+  web_socket_channel: ^3.0.3
+  
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +77,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  bloc_test: ^10.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
