--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,9 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+android.overridePathCheck=true
+android.experimental.enableSourceSetPaths=true
+android.defaults.buildfeatures.buildconfig=true
+android.compileSdk=36
+android.targetSdk=36
+android.minSdk=36
