--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,6 @@ dependencies:
   supabase_flutter: ^2.10.1
   razorpay_flutter: ^1.4.0
   permission_handler: ^12.0.1
-  usage_stats: ^1.3.1
   intl: ^0.20.2
   shared_preferences: ^2.5.3
   blurrycontainer: ^2.1.0
@@ -65,6 +64,15 @@ dependencies:
   collection: ^1.19.1
   shimmer: ^3.0.0
   web_socket_channel: ^3.0.3
+  dtd: ^4.0.0
+  flutter_lints: ^6.0.0
+  json_rpc_2: ^4.0.0
+  path: ^1.9.1
+  stack_trace: ^1.12.1
+  url_launcher: ^6.3.2
+  web: ^1.1.1
+  app_usage: ^4.0.1
+  android_intent_plus: ^6.0.0
   
 
 dev_dependencies:
@@ -76,8 +84,14 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
   bloc_test: ^10.0.0
+  flutter_launcher_icons: ^0.14.4
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo/ravera_logo.png"
+  adaptive_icon_foreground: "assets/logo/ravera_logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -94,6 +108,8 @@ flutter:
     - .env
     - assets/images/
     - assets/tag_images/
+    - assets/icons/
+    - assets/logo/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
